DAPP UX event changes

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>BlockParty - no block no party</title>
+  <title>DAPP: UX & Adoption - no dapp no blockparty</title>
   <meta name="viewport" content="width=device-width,initial-scale=0.8">
   <script src="./app.js"></script>
   <meta charset="UTF-8">
